Fixed navbar squishing or whatever

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ section {
     overflow: none;
     padding: 0vw 0 0vw 0;
 }
-.img img {
+img {
     width: 75%;
     margin: 0 12.5% 0 12.5%;
 }
@@ -332,18 +332,6 @@ img.close:hover {
     display: flex;
     flex-direction: column;
 }
-#books {
-    padding: 2vw 12.5% 2vw 12.5%;
-    font-size: 3vw;
-    display: flex;
-    flex-direction: column;
-}
-.book-default {
-    font-size: 1vw;
-}
-.book-thumb {
-    font-size: 1vw;
-}
 .dashbtn {
     font-size: 1vw;
     color: black;
@@ -442,3 +430,22 @@ img.close:hover {
         flex-wrap: wrap;
     }
 }
+
+@media (max-width: 850px) {
+    .logo {
+    float: none;
+    text-align: center;
+    display: block;
+    padding: 0;
+    margin: 15px 0px;
+    }
+    .menu {
+    float: left;
+    text-align: center;
+    display: block;
+    justify-content: space-evenly;
+    margin: 15px 0px 15px 0px;
+    padding: 0;
+}
+}
+
